# verifactu_spain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
elena_spain/: hooks.py  modules.txt  setup.py
elena_spain/elena_ai/: ai_logic.py
elena_spain/elena_spain/print_format/factura_elena_verifactu/: factura_elena.html  factura_elena.json
elena_spain/fixtures/: custom_field.json  property_setter.json
elena_spain/public/css/: elena_print.css
elena_spain/public/js/: purchase_invoice.js
elena_spain/verifactu/: logic.py
